css/ffbo.Menu.css
 #ui_menu_nav:not( .mm-menu ) {
    display: none;
}
#sidebar-wrapper:not( .mm-menu ) {
    display: none;
}
@media screen and (max-width: 512px) {
    html.mm-opening .mm-slideout .ffbo-app {
        display: none;
    }
    html.mm-opening .mm-slideout .navbar-brand {
        display: none;
    }
}
@media screen and (max-width: 768px) {
    .mm-menu.mm-menu_offcanvas{
        width: 170px !important;
    }
    html.mm-right.mm-opening .mm-slideout{
        /*transform: translate3d(-0px,0,0) !important;*/
        width: calc( 100% - 170px ) !important;
    }
    html.mm-opening .mm-slideout{
        /*transform: translate3d(170px,0,0) !important;*/
        width: calc( 100% - 170px ) !important;
    }
}
@media screen and (min-width: 769px) {
    .mm-menu.mm-menu_offcanvas{
        width: 270px !important;
    }
    html.mm-right.mm-wrapper_opening .mm-slideout{
        transform: translate3d(-0px,0,0) !important;
        width: calc( 100% - 270px ) !important;
    }
    html.mm-wrapper_opening .mm-slideout{
        transform: translate3d(-0px,0,0) !important;
        width: calc( 100% - 270px ) !important;
    }
}
@media screen and (min-width: 900px) and (max-width: 1200px) {
    html.mm-wrapper_opening .mm-slideout .navbar-fixed-bottom > ul > li:first-child,
    html.mm-wrapper_opening .mm-slideout div.navbar-collapse.collapse {
        display: none !important;
    }
}

#ui_menu_nav {
  border-left: #434343 1px solid;
  background: var(--background-color);
 }
.mm-menu .mm-btn:after, .mm-menu .mm-btn:before,
.mm-menu .mm-listview > li .mm-next:after {
  border-color: #545454;
}

/* #ui_menu_nav  .mm-panel  li, #ui_menu_nav  .mm-panel  span,
#ui_menu_nav  .mm-panel  a, .mm-searchfield input {
  color: var(--font-color-navbar);
} */

.mm-panels div, .mm-searchfield input, .mm-navbar  a {
  color: var(--font-color-navbar) !important;
}

.mm-menu .mm-listview .mm-btn_next:after {
  border-color: var(--font-color-navbar) !important;
}


.mm-menu .mm-listview > li:hover .mm-next:after,
.mm-navbar:hover a:before {
  border-color: var(--font-color-navbar-hl);
}
.mm-navbar:hover a,
.mm-listview li:hover a,
.mm-listview li:hover span {
  color: var(--font-color-navbar-hl);
}
.mm-listview > li:not(.mm-divider):after {
  background: #323232;
}
.mm-navbar {
  border-color: #323232;
  height: 50px;
}
.mm-navbar > a {
  height: 50px !important;
  line-height: 30px !important;
}
.mm-listview {
  margin-top: -10px !important;
}

.mm-listview li a {
  cursor: pointer;
  padding: 5px 10px 10px 10px !important;
}

.mm-listview li a:not(:first-of-type) {
  float: right;
}

.mm-listview li a.btn-pinned {
  color: #fff;
}

.mm-listview li a.btn-unpinned {
  margin-top: 1px;
  margin-left: -5px !important;
  padding-right: 12px !important;
  transform: rotate(45deg);
  color: #666;
}

.navbar-collapse > ul > li {
    cursor: pointer;
}

.mm-listview > li.hover,
.mm-listview > li:hover,
.navbar-collapse > ul > li.hover,
.navbar-collapse > ul > li:hover {
    background: var(--li-hover-color);
    /*background: #545454;*/
}
.mm-listview > li.hover > a,
.mm-listview > li:hover > a,
.navbar-collapse > ul > li.hover > a {
    color: #fff !important;
}

.mm-listview > li.hover > span,
.mm-listview > li:hover > span,
.navbar-collapse > ul > li.hover > span {
    color: #fff !important;
}

/*.mm-listview li:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    height: 100%;
    width: 3px;
    background-color: #1c1c1c;
    -webkit-transition: width .2s ease-in;
      -moz-transition:  width .2s ease-in;
       -ms-transition:  width .2s ease-in;
            transition: width .2s ease-in;

}*/
/*.mm-listview li:before {
    background-color: #323232;
}*/

.mm-listview li.hover:before,
.mm-listview li:hover:before,
.mm-listview li.open.hover:before,
.mm-listview li.open:hover:before {
    width: 100%;
    -webkit-transition: width .2s ease-in;
      -moz-transition:  width .2s ease-in;
       -ms-transition:  width .2s ease-in;
            transition: width .2s ease-in;

}


.mm-listview li a {
    display: inline-block;
/*    color: #ddd; */
    text-decoration: none;
    padding: 10px 15px 10px 30px;
}

.mm-listview li a:hover,
.mm-listview li a:active,
.mm-listview li a:focus,
.mm-listview li.open a:hover,
.mm-listview li.open a:active,
.mm-listview li.open a:focus,
.mm-listview li div:hover,
.mm-listview li div:active,
.mm-listview li div:focus,
.mm-listview li.open div:hover,
.mm-listview li.open div:active,
.mm-listview li.open div:focus{
    color: #fff;
    text-decoration: none;
    background-color: transparent;
}

.navbar {
    z-index: 2;
}

#ui-menu-nav {
   z-index: 999;
}

